data/forge_javadoc/1.7.10/processed/net_minecraft_client_gui_GuiCreateWorld.md
# GuiCreateWorld

**Inheritance:** java.lang.Object → net.minecraft.client.gui.Gui → net.minecraft.client.gui.GuiScreen → net.minecraft.client.gui.GuiCreateWorld

## Class signature

```java
public class GuiCreateWorld extends GuiScreen
```

## Constructors

- `GuiCreateWorld(GuiScreen p_i1030_1_)`

## Methods

- `protected void actionPerformed(GuiButton p_146284_1_)`
- `void drawScreen(int p_73863_1_, int p_73863_2_, float p_73863_3_)`
- `static java.lang.String func_146317_a(ISaveFormat p_146317_0_, java.lang.String p_146317_1_)`
- `void func_146318_a(WorldInfo p_146318_1_)`
- `void initGui()`
- `protected void keyTyped(char p_73869_1_, int p_73869_2_)`
- `protected void mouseClicked(int p_73864_1_, int p_73864_2_, int p_73864_3_)`
- `void onGuiClosed()`
- `void updateScreen()`

## Fields

- `java.lang.String field_146334_a`